# delegate

./: CMakeLists.txt  LICENSE  README.md
demo/: main.cpp
docs/: delegate.md
include/: delegate.h
src/: delegate.h
tests/: CMakeLists.txt  tests.cpp
